syntax = "proto3";
package sysmon;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Xacor/go-sysmon/sysmonpb";

service SysMon {
    rpc GetSnapshot(Request) returns (stream Snapshot) {}
}

message Request {
    google.protobuf.Duration refreshRate = 1;
    google.protobuf.Duration refreshInterval = 2;
}

message Snapshot {
    LoadAverage loadAverage = 1;
    ProcStat procStat = 2;
    IOStat ioStat = 3;
    google.protobuf.Timestamp timeCreated = 15;
}

message LoadAverage {
    float load1 = 1;
    float load5 = 2;
    float load15 = 3;
}

message ProcStat {
    float  us = 1; 
    float  sy = 2; 
    float  id = 3; 
}

message IOStat {
    float tps = 1;
    float rwps = 2;
}